--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "16.12.0",
     "react-dropzone": "10.2.1",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.5.0",
     "styled-components": "5.0.1"
   },
   "devDependencies": {
